<resources>
    <string name="app_name">Приливы в Магадане</string>
    <string name="nothing"/>

    <string name="ma_percent">%1$s %%</string>
    <string name="ma_water_height">%1$s м</string>
    <string name="ma_humidity">%1$s%%</string>
    <string name="ma_temperature">%1$s°</string>
    <string name="ma_wind">%1$s м/с</string>>

    <string name="humidity">Влажность</string>
    <string name="wind_force">Сила ветра</string>
    <string name="water_height">Уровень воды</string>
    <string name="wind_direction">Направление ветра</string>
    <string name="temperature">Температура воздуха</string>
    <string name="water_time">Вода</string>

    <string name="close_alert_dialog_site_title">Техническая ошибка</string>
    <string name="close_alert_dialog_warning_title">Предупреждение</string>
    <string name="close_alert_dialog_site">Извините, в данный момент приложение недоступно по техническим причинам.</string>

    <string name="close_alert_dialog_net_title">Ошибка интернет-соединения</string>
    <string name="close_alert_dialog_net">Не удалось запустить приложение из-за проблем с интернет-соединением.
        Проверьте подключение к сети и повторите попытку.</string>

    <string name="warning_alert_dialog_net">Интернет-соеднинение отсутствует. Данные о погоде могут отображаться некорректно.</string>
    <string name="warning_alert_dialog_server">Данные о погоде могут отображаться некорректно.</string>

    <string name="close_alert_dialog_net_update_db">Не удалось обновить данные из-за проблем с интернет-соединением.
        Проверьте подключение к сети и повторите попытку.</string>

    <string name="about_prog_alert_dialog_title">О программе</string>
    <string name="about_prog_alert_dialog_mes">Версия приложения: </string>
    <string name="about_prog_alert_dialog_company">Copyright © Stlanik Studio, 2020</string>
    <string name="exit">Выйти</string>
    <string name="ok">ОК</string>
    <string name="sunset">ЗАХОД</string>
    <string name="sunrise">ВОСХОД</string>

    <string name="txt_screen_1">1</string>
    <string name="txt_screen_2">2</string>
    <string name="tide_now">Высота %1$s воды</string>
    <string name="menu">Меню</string>
    <string name="help">Справка</string>
    <string name="about_app">О приложении</string>
    <string name="bay_name">Бухта Нагаева</string>
    <string name="remaining_time">до %1$s воды</string>
    <string name="download">Загрузка данных...</string>
    <string name="next_days">следующие дни</string>
    <string name="introduction_inf">Приливы в Магадане - это приложение, которое позволит Вам запланировать свой отдых или досуг
                                на море: в бухте Нагаева. Здесь Вы сможете найти информацию о текущем состоянии погоды в бухте, оставшееся время до ближашей малой/полной воды,
                                а также график времен полных и малых вод на 10 дней.
    </string>
    <string name="general_inf">1. Приложение состоит из 3 основных страниц, разделенных на тематические блоки: \"Сейчас\", \"Сегодня\", \"Выбор дня\".
                               Для перехода между страницами сделайте свайп влево или вправо.
    </string>
    <string name="first_page_inf">
        2. Первая страница приложения содержит информацию о текущих погодных условиях в бухте Нагаева.
        Для того, чтобы обновить информацию на странице сделайте свайп вниз (проведите по экрану сверху-вниз).
    </string>
    <string name="second_page_inf">
            3. Вторая страница приложения содержит информацию о времени восхода и захода солнца,а также график полных и малых вод на сегодня.
    </string>
    <string name="third_page_inf">
            4. Третья страница приложения предоставляет возможность узнать время восхода и захода солнца, а также график времен и высот
            полных и малых вод на следующие 10 дней. Для перехода к нужному дню необходимо выбрать кнопку с соответствующей датой и нажать на нее.
    </string>
    <string name="third_page_button_notactiv">
            Если кнопка выделена серым цветом - она неактивна, значит выбранный день находится в следующем месяце
            (к сожалению в приложении пока нельзя просматривать график на следующий месяц).
    </string>
    <string name="third_page_button_backward">
            Для того, чтобы вернуться к выбору дня - нажмите кнопку назад на смартфоне.
    </string>
    <string name="dropdown_menu_inf">
            5. Для того, чтобы ознакомиться информацией о программе - нажмите на кнопку \"О программе\",
            которая находятся в выпадающем меню, расположеенном в верхнем левом углу приложения.
    </string>

    <string name = "refresh_finished">Обновлено</string>

</resources>
