<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52" />

        <TextView
            android:id="@+id/tv_remainingTimeTide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="110sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.32"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_state"
            style="@android:style/Widget.DeviceDefault.TextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_remainingTimeTide" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_waterTime_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_temperature_2"
            app:layout_constraintEnd_toStartOf="@+id/cv_waterHeight_4"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_state"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_waterTime_1_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/water_time"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_waterTime_1_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_temperature_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_windSide_3"
            app:layout_constraintEnd_toStartOf="@+id/cv_humidity_5"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_waterTime_1"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_temperature_2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/temperature"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_temperature_2_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_windSide_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/cv_windStrength_6"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_temperature_2"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#9524DF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_windSide_3_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/wind_direction"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_windSide_3_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_waterHeight_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_humidity_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toEndOf="@+id/cv_waterTime_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_state"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_waterHeight_4_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/tide_now"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_waterHeight_4_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_humidity_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_windStrength_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toEndOf="@+id/cv_temperature_2"
            app:layout_constraintTop_toBottomOf="@+id/cv_waterHeight_4"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_humidity_5_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_humidity_5_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_windStrength_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#40FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toEndOf="@+id/cv_windSide_3"
            app:layout_constraintTop_toBottomOf="@+id/cv_humidity_5"
            app:layout_constraintWidth_percent="0.44"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="8dp">

            <TextView
                android:id="@+id/tv_windStrength_6_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_font"
                android:gravity="center_horizontal|top"
                android:text="@string/wind_force"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_windStrength_6_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/my_number_font"
                android:gravity="bottom|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </android.support.v7.widget.CardView>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <TextView
            android:id="@+id/tv_remaining_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:text="@string/remaining_time"
            android:textColor="#8CFFFFFF"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>



</android.support.v4.widget.SwipeRefreshLayout>