<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/shell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sunrise"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:gravity="start|center_vertical"
        android:text="@string/sunrise"
        android:fontFamily="@font/my_nice_font"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/cv_time1"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sunrise_time"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/my_number_font"
        android:gravity="end|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/cv_height1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/guidline"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/my_nice_font"
        android:gravity="end|center_vertical"
        android:text="@string/sunset"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12" />

    <TextView
        android:id="@+id/tv_sunset_time"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:elegantTextHeight="true"
        android:gravity="start|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/my_number_font"
        tools:ignore="HardcodedText"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_time1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_time2"
        app:layout_constraintEnd_toStartOf="@+id/cv_height1"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_water1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/water_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_time1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_height1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_height2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toEndOf="@+id/cv_time1"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_tide1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/tide_now"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_height1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_time2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_time3"
        app:layout_constraintEnd_toStartOf="@+id/cv_height2"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_water2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/water_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_time2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_height2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_height3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toEndOf="@+id/cv_time2"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_tide2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/tide_now"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_height2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_time3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_time4"
        app:layout_constraintEnd_toStartOf="@+id/cv_height3"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_water3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/water_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_time3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_height3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_height4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toEndOf="@+id/cv_time3"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_tide3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/tide_now"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_height3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_time4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidline"
        app:layout_constraintEnd_toStartOf="@+id/cv_height4"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_water4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/water_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_time4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="my_number_font"
            android:gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_height4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#40FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toEndOf="@+id/cv_time4"
        app:layout_constraintWidth_percent="0.44"
        app:strokeColor="#9524DF"
        app:strokeWidth="8dp">

        <TextView
            android:id="@+id/tv_tide4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_font"
            android:gravity="center_horizontal|top"
            android:text="@string/tide_now"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_height4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/my_number_font"
            android:gravity="center_horizontal|bottom"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:clickable="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
        app:layout_constraintEnd_toEndOf="@+id/toolbar1"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        app:srcCompat="@drawable/points1" />

    <TextView
        android:id="@+id/tv_weekday"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="ПОНЕДЕЛЬНИК"
        android:fontFamily="@font/my_nice_font"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/my_number_font"
        android:text="6:15"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

</android.support.constraint.ConstraintLayout>